[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Panel"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -55.0
margin_right = 300.0
margin_bottom = 55.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 20.0
text = "Resume"

[node name="Select Level" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 600.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../Settings")
text = "Select Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 80.0
focus_neighbour_top = NodePath("../Select Level")
focus_neighbour_bottom = NodePath("../Quit")
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 110.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Select Level" to="." method="_on_Select_Level_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
